--- a/app/assets/stylesheets/partial/_dashboard.scss
+++ b/app/assets/stylesheets/partial/_dashboard.scss
@@ -707,7 +707,7 @@
   .pad-15 {
     padding-left: 15px;
     @media (max-width: $sitnet-mobile) {
-      margin-left: 0px;
+      margin-left: 0;
     }
   }
 
